--- a/assets/appointments.css
+++ b/assets/appointments.css
@@ -3,8 +3,13 @@ body.koopo-appt--modal-open {
   overflow: hidden;
 }
 
-.koopo-appt__open {
+.koopo-appt .koopo-appt__open {
   cursor: pointer;
+  border-radius:12px;
+}
+.koopo-appt .koopo-appt__open:hover {
+  box-shadow: 1px 4px 16px 1px #d9d9d9ee;
+  border-radius:12px;
 }
 
 /* Overlay */
